minor replace all patientlogin.html lines to patientUI.html

--- a/UI/patientUI.html
+++ b/UI/patientUI.html
@@ -59,7 +59,7 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li><a href="./patientLogin.html">Patient</a></li>
+          <li><a href="./patientUI.html">Patient</a></li>
           <li><a href="./nurseLogin.html">Nurse</a></li>
           <li><a href="./doctorLogin.html">Doctor</a></li>
         </ul>
@@ -73,7 +73,7 @@
   <section id="testimonials" class="wow fadeInUp">
     <div class="container">
       <div class="section-header">
-        <h2>PATIENT PORTAL</h2>
+        <h2>Patient Portal</h2>
       </div>
     </div>
 
@@ -101,7 +101,7 @@
               <br>
             </span>
             <!-- Search bar END-->
-
+            <br>
             <!-- Appointment booked table START -->
             <div v-show="!edit"> <!-- v-show: hasAppointment START--> 
             <h3 class="cta-title text-center">Appointment Booked</h3>
