--- a/UI/index.html
+++ b/UI/index.html
@@ -58,7 +58,7 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li><a href="./patientLogin.html">Patient</a></li>
+          <li><a href="./patientUI.html">Patient</a></li>
           <li><a href="./nurseLogin.html">Nurse</a></li>
           <li><a href="./doctorLogin.html">Doctor</a></li>
         </ul>
@@ -80,7 +80,7 @@
        
         <a href="#app1" class="btn-get-started scrollto">Book an Appointment</a>
         <br>
-        <a href="./patientLogin.html" class="btn-get-started scrollto">Check Appointment Details</a>
+        <a href="./patientUI.html" class="btn-get-started scrollto">Check Appointment Details</a>
         <br><br>
       </div>
     </div>
