--- a/UI/nurseUI-confirm.html
+++ b/UI/nurseUI-confirm.html
@@ -136,7 +136,7 @@
         <h5 class="font-weight-bold text-center">You have successfully confirmed this appointment!</h5>
       </div>
       <div class="modal-footer mx-auto">
-        <button type="button" class="btn btn-primary" href='#'>Notify Patient</button>
+        <button type="button" class="btn btn-primary" @click="closeConfirmedModal">Notify Patient</button>
       </div>
     </div>
   </div>
