--- a/UI/nurseUI-match.html
+++ b/UI/nurseUI-match.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Match Appointments</title>
@@ -12,7 +13,9 @@
   <link href="img/nurse.png" rel="nurse-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700"
+    rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,6 +30,13 @@
 
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
+  <style>
+    .btn-blue {
+      background: #0c2e8a;
+      border: 2px solid #0c2e8a;
+      color: white;
+    }
+  </style>
 
   <!-- =======================================================
     Theme Name: Reveal
@@ -55,74 +65,79 @@
   </header><!-- #header -->
 
 
-    <!--==========================
+  <!--==========================
       Call To Action Section
     ============================-->
-    <section id="call-to-action" class="wow fadeInUp md-margintop">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-9 text-center text-lg-left">
-            <h3 class="cta-title">Back to Nurse Administration Portal Homepage</h3>
-          </div>
-          <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="./nurseUI.html">Home</a>
-          </div>
+  <section id="call-to-action" class="wow fadeInUp md-margintop">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-9 text-center text-lg-left">
+          <h3 class="cta-title">Back to Nurse Administration Portal Homepage</h3>
         </div>
-
+        <div class="col-lg-3 cta-btn-container text-center">
+          <a class="cta-btn align-middle" href="./nurseUI.html">Home</a>
+        </div>
       </div>
-    </section><!-- #call-to-action -->
+
+    </div>
+  </section><!-- #call-to-action -->
   <!--==========================
     Intro Section
   ============================-->
   <section id="intro">
     <div class="intro-content" id='app'>
       <h2 style="font-size:xx-large;"><span>Match </span>Patient Appointments</h2>
-      <div class="table-responsive">
-        <table class="table table-hover table-bordered" v-if="hasAppointments">
-          <thead class="table-info">
-            <tr>
-              <th scope="col">Appointment ID</th>
-              <th scope="col">Patient Name</th>
-              <th scope="col">Appointment Date</th>
-              <th scope="col">Appointment Time</th>
-              <th scope="col">Available Doctors</th>
-              <th scope="col">Status</th>
-              <th scope="col">Action</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr v-for="(record, index) in appointments" class="table-light">
-              <th scope="row"> {{ record.appointment_id }} </th>
-              <td>{{ record.patient_name }}</td>
-              <td> {{ date[index] }} </td>
-              <td> {{ record.appointment_time }} </td>
-              <td v-if='doctorsAvail'> 
-                <select v-model="selected" > 
-                  <option disabled value="">Please select a doctor</option>
-                  <option v-for="doctor in appointments[index].avail_doctors" :key='doctor.doctor_name'>  
+      <div class="container">
+        <div class="table-responsive">
+          <table class="table table-hover table-bordered" v-if="hasAppointments">
+            <thead style="background-color:#0c2e8a; color:white">
+              <tr>
+                <th scope="col">Appointment ID</th>
+                <th scope="col">Patient Name</th>
+                <th scope="col">Appointment Date</th>
+                <th scope="col">Appointment Time</th>
+                <th scope="col">Available Doctors</th>
+                <th scope="col">Status</th>
+                <th scope="col">Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr v-for="(record, index) in appointments" class="table-light">
+                <th scope="row"> {{ record.appointment_id }} </th>
+                <td>{{ record.patient_name }}</td>
+                <td> {{ date[index] }} </td>
+                <td> {{ record.appointment_time }} </td>
+                <td v-if='doctorsAvail'>
+                  <select v-model="selected">
+                    <option disabled value="">Please select a doctor</option>
+                    <option v-for="doctor in appointments[index].avail_doctors" :key='doctor.doctor_name'>
                       {{ doctor.doctor_name }}
-                  </option>
-                </select> 
-               </td>
-               <td class='text-danger' v-else>there are no doctors {{ noDrs }}</td>
-              <td> {{ record.status }} </td>
-              <td><button class="btn btn-success" @click="successfulMatch(index)" data-toggle="modal" data-target="#matchedModal">Match</button> </td>
-            </tr>
-            
-          </tbody>
-        </table>
+                    </option>
+                  </select>
+                </td>
+                <td class='text-danger' v-else>there are no doctors {{ noDrs }}</td>
+                <td> {{ record.status }} </td>
+                <td><button class="btn btn-blue" @click="successfulMatch(index)" data-toggle="modal"
+                    data-target="#matchedModal">Match</button> </td>
+              </tr>
 
-        <div class="text-danger" v-else>{{ message }}</div> <!-- Error message if can't get data from microservice-->
+            </tbody>
+          </table>
+
+          <div class="text-danger" v-else>{{ message }}</div> <!-- Error message if can't get data from microservice-->
+        </div>
       </div>
 
-      <div  v-if='showModal' id="matchedModal" class="modal" tabindex="-1" role="dialog" @click='updateMatchDetails'>
+
+      <div v-if='showModal' id="matchedModal" class="modal" tabindex="-1" role="dialog" @click='updateMatchDetails'>
         <transition name='modal'>
           <div class='modal-mask'>
             <div class="modal-wrapper">
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <button type="button" class="close"  @click='updateMatchDetails' data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="close" @click='updateMatchDetails' data-dismiss="modal"
+                      aria-label="Close">
                       <span aria-hidden='true'>&times;</span>
                     </button>
                     <h4 class="modal-title">{{ modalTitle }}</h4>
@@ -143,7 +158,7 @@
       </div>
     </div>
 
-    <div id="intro-carousel" class="owl-carousel" >
+    <div id="intro-carousel" class="owl-carousel">
       <div class="item" style="background-image: url('img/intro-carousel/1.jpg');"></div>
       <div class="item" style="background-image: url('img/intro-carousel/2.jpg');"></div>
       <div class="item" style="background-image: url('img/intro-carousel/3.jpg');"></div>
@@ -154,7 +169,7 @@
   </section>
   <!-- #intro -->
 
- <!--==========================
+  <!--==========================
  Footer
  ============================-->
   <footer id="footer">
@@ -177,7 +192,7 @@
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
- <!-- JavaScript Libraries -->
+  <!-- JavaScript Libraries -->
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/jquery/jquery-migrate.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -189,24 +204,25 @@
   <script src="lib/magnific-popup/magnific-popup.min.js"></script>
   <script src="lib/sticky/sticky.js"></script>
 
- <!-- Contact Form JavaScript File -->
+  <!-- Contact Form JavaScript File -->
   <!-- <script src="contactform/contactform.js"></script> -->
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
   <script src="js/nurse-match.js"></script>
 
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
 
 </body>
+
 </html>
