minor color change to nurseUI

--- a/UI/nurseUI-match.html
+++ b/UI/nurseUI-match.html
@@ -144,10 +144,10 @@
                   </div>
                   <div class="modal-body mt-4">
                     <br>
-                    Patient's Name: {{ selectedAppt[0] }} <br>
-                    Appointed Doctor: {{ selected }} <br>
-                    Appointment Date: {{ selectedAppt[1] }} <br>
-                    Appointment Time: {{ selectedAppt[2] }} <br><br><br>
+                    Patient's Name: <b>{{ selectedAppt[0] }}</b> <br>
+                    Appointed Doctor: <b>{{ selected }}</b> <br>
+                    Appointment Date: <b>{{ selectedAppt[1] }}</b> <br>
+                    Appointment Time: <b>{{ selectedAppt[2] }} </b> <br><br><br>
 
                   </div>
                 </div>
