Centralise the booking form

--- a/UI/index.html
+++ b/UI/index.html
@@ -98,9 +98,9 @@
   <!--==========================
     Book an Appointment Form section
   ============================-->
-  <div id="app1">
-    <section id="call-to-action" class="wow fadeInUp"> <!-- Book an Appointment section START -->
-      <div class="container px-5 mx-5">  <!-- Container START-->
+  <div id="app1"> 
+    <section id="call-to-action" class="wow fadeInUp" > <!-- Book an Appointment section START -->
+      <div class="container">  <!-- Container START-->
         <div class="row justify-content-center"> <!-- Row START-->
           <h3 class="cta-title">Book an Appointment</h3>
           <table class="table borderless">
