--- a/UI/nurseUI.html
+++ b/UI/nurseUI.html
@@ -53,7 +53,14 @@
         <!-- <a href="#body"><img src="img/logo.png" alt="" title="" /></a>-->
       </div>
 
-
+      <nav id="nav-menu-container">
+        <ul class="nav-menu">
+          <li><a href="./patientLogin.html">Patient</a></li>
+          <li><a href="./nurseLogin.html">Nurse</a></li>
+          <li><a href="./doctorLogin.html">Doctor</a></li>
+        </ul>
+      </nav><!-- #nav-menu-container -->
+      
     </div>
   </header><!-- #header -->
 
@@ -100,7 +107,8 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
             <h3 class="cta-title">Nurse Administration Portal</h3>
-            <p class="cta-text"> Match patients' bookings with doctors and confirm the appointments a day before <br>they
+            <p class="cta-text"> Match patients' bookings with doctors and confirm the appointments a day before
+              <br>they
               are scheduled</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
@@ -190,7 +198,7 @@
     </section><!-- #team -->
 
 
-  
+
 
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
