--- a/UI/nurseUI-match.html
+++ b/UI/nurseUI-match.html
@@ -97,7 +97,7 @@
               <td> {{ date[index] }} </td>
               <td> {{ record.appointment_time }} </td>
               <td v-if='doctorsAvail'> 
-                <select v-model="selected" > 
+                <select v-model="selected" @change="selectDoctor(index)"> 
                   <option disabled value="">Please select a doctor</option>
                   <option v-for="doctor in appointments[index].avail_doctors" :key='doctor.doctor_name'>  
                       {{ doctor.doctor_name }}
@@ -106,7 +106,7 @@
                </td>
                <td class='text-danger' v-else>there are no doctors {{ noDrs }}</td>
               <td> {{ record.status }} </td>
-              <td><button class="btn btn-success" @click="successfulMatch(index)" data-toggle="modal" data-target="#matchedModal">Match</button> </td>
+              <td><button class="btn btn-success" @click="successfulMatch" data-toggle="modal" data-target="#matchedModal">Match</button> </td>
             </tr>
             
           </tbody>
@@ -129,10 +129,10 @@
                   </div>
                   <div class="modal-body mt-4">
                     <br>
-                    Patient's Name: {{ selectedAppt[0] }} <br>
+                    Patient's Name: {{ selectedAppt.p_name }} <br>
                     Appointed Doctor: {{ selected }} <br>
-                    Appointment Date: {{ selectedAppt[1] }} <br>
-                    Appointment Time: {{ selectedAppt[2] }} <br><br><br>
+                    Appointment Date: {{ selectedAppt.date }} <br>
+                    Appointment Time: {{ selectedAppt.time }} <br><br><br>
 
                   </div>
                 </div>
