updated notify.py & appointment.py (GET nextday appts and PATCH appt status)

--- a/UI/nurseUI-confirm.html
+++ b/UI/nurseUI-confirm.html
@@ -130,7 +130,7 @@
 
     <!-- Modal -->
     <!-- display success/error alert with if condition -->
-<div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
+<div class="modal fade" id="confirmModal" @close='closeModal' tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content" style="background-color:rgb(207, 252, 226);">
       <!-- <div class="modal-header">
